# financial-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/financial_agent/: agent.py  mock_data.py  tools.py
api/: requirements.txt
tests/: test_financial_agent_tools.py
ui/: app.py
